--- a/index.html
+++ b/index.html
@@ -9,3 +9,8 @@
     <!-- Content will go here -->
 </body>
 </html>
+<body>
+    <h1>Welcome to My First Website</h1>
+    <p>This is a paragraph of text. It explains what my website is about!</p>
+    <p>Learn more by visiting my <a href="https://example.com">favorite website</a>.</p>
+</body>
