--- a/index.html
+++ b/index.html
@@ -14,3 +14,46 @@
     <p>This is a paragraph of text. It explains what my website is about!</p>
     <p>Learn more by visiting my <a href="https://example.com">favorite website</a>.</p>
 </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Website</title>
+    <style>
+        body {
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            color: #333;
+            text-align: center;
+        }
+        h1 {
+            color: #4CAF50;
+        }
+        a {
+            color: #0077cc;
+            text-decoration: none;
+        }
+        img {
+            width: 300px;
+            height: auto;
+            border-radius: 10px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to My First Website</h1>
+    <img src="https://via.placeholder.com/300" alt="Placeholder Image">
+    <p>This is a paragraph of text. It explains what my website is about!</p>
+    <p>Learn more by visiting my <a href="https://example.com">favorite website</a>.</p>
+</body>
+<body>
+    <h1>Welcome to My First Website</h1>
+    <img src="https://via.placeholder.com/300" alt="Placeholder Image">
+    <p>This is a paragraph of text. It explains what my website is about!</p>
+
+    <h2>Useful Links:</h2>
+    <ul>
+        <li><a href="https://example.com">Example Website</a></li>
+        <li><a href="https://google.com">Google</a></li>
+        <li><a href="https://github.com">GitHub</a></li>
+    </ul>
+</body>
