--- a/index.html
+++ b/index.html
@@ -54,6 +54,4 @@
     <ul>
         <li><a href="https://example.com">Example Website</a></li>
         <li><a href="https://google.com">Google</a></li>
-        <li><a href="https://github.com">GitHub</a></li>
-    </ul>
-</body>
+        <li><a href="https://github.com">GitHub</a></li
